--- a/notebooks/20210122-LDA-brigrams-trigrams.ipynb
+++ b/notebooks/20210122-LDA-brigrams-trigrams.ipynb
@@ -409,58 +409,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: ('0.011*\"store\" + 0.011*\"home\" + 0.011*\"service\" + 0.009*\"sale\" + 0.009*\"new\" + 0.008*\"ship\" + 0.008*\"search\" + 0.008*\"product\" + 0.008*\"contact\" + 0.007*\"offer\"',)\n",
+      "42: ('0.047*\"group\" + 0.038*\"risk\" + 0.023*\"supplier\" + 0.022*\"chain\" + 0.019*\"policy\" + 0.016*\"business\" + 0.016*\"procurement\" + 0.013*\"service\" + 0.012*\"year\" + 0.011*\"include\"',)\n",
       "\n",
-      "1: ('0.011*\"container\" + 0.008*\"supplier\" + 0.007*\"gas_turbine\" + 0.007*\"risk\" + 0.006*\"right\" + 0.006*\"shower_enclosure\" + 0.006*\"business\" + 0.005*\"include\" + 0.005*\"policy\" + 0.004*\"chain\"',)\n",
+      "37: ('0.026*\"procurement\" + 0.020*\"supplier\" + 0.016*\"policy\" + 0.015*\"staff\" + 0.015*\"work\" + 0.012*\"process\" + 0.011*\"ensure\" + 0.011*\"chain\" + 0.011*\"include\" + 0.010*\"train\"',)\n",
       "\n",
-      "2: ('0.021*\"policy\" + 0.017*\"right\" + 0.016*\"supplier\" + 0.016*\"include\" + 0.014*\"work\" + 0.011*\"business\" + 0.010*\"employee\" + 0.009*\"risk\" + 0.009*\"group\" + 0.009*\"chain\"',)\n",
+      "44: ('0.029*\"information\" + 0.029*\"datum\" + 0.028*\"process\" + 0.023*\"personal\" + 0.016*\"supplier\" + 0.016*\"provide\" + 0.012*\"service\" + 0.010*\"use\" + 0.010*\"request\" + 0.009*\"may\"',)\n",
       "\n",
-      "3: ('0.041*\"supplier\" + 0.021*\"conduct\" + 0.019*\"law\" + 0.017*\"employee\" + 0.017*\"compliance\" + 0.016*\"business\" + 0.015*\"code\" + 0.015*\"chain\" + 0.013*\"include\" + 0.013*\"product\"',)\n",
+      "1: ('0.004*\"supplier\" + 0.003*\"risk\" + 0.003*\"right\" + 0.003*\"business\" + 0.003*\"include\" + 0.002*\"policy\" + 0.002*\"company\" + 0.002*\"chain\" + 0.002*\"labor\" + 0.002*\"conduct\"',)\n",
       "\n",
-      "4: ('0.023*\"supplier\" + 0.021*\"labor\" + 0.019*\"chain\" + 0.014*\"risk\" + 0.013*\"business\" + 0.012*\"audit\" + 0.012*\"include\" + 0.012*\"right\" + 0.010*\"company\" + 0.010*\"compliance\"',)\n",
+      "11: ('0.020*\"chef\" + 0.013*\"pickup\" + 0.008*\"gluten_free\" + 0.006*\"bakery\" + 0.006*\"bread\" + 0.004*\"risk\" + 0.003*\"ship\" + 0.003*\"policy\" + 0.003*\"order\" + 0.003*\"chain\"',)\n",
       "\n",
-      "5: ('0.015*\"work\" + 0.012*\"support\" + 0.012*\"business\" + 0.011*\"people\" + 0.010*\"service\" + 0.009*\"right\" + 0.008*\"chain\" + 0.008*\"supplier\" + 0.007*\"customer\" + 0.006*\"policy\"',)\n",
+      "45: ('0.057*\"policy\" + 0.020*\"business\" + 0.017*\"may\" + 0.016*\"supplier\" + 0.016*\"ensure\" + 0.016*\"breach\" + 0.015*\"chain\" + 0.013*\"employee\" + 0.013*\"work\" + 0.013*\"part\"',)\n",
       "\n",
-      "6: ('0.041*\"supplier\" + 0.029*\"risk\" + 0.023*\"right\" + 0.012*\"business\" + 0.011*\"chain\" + 0.011*\"include\" + 0.010*\"process\" + 0.009*\"policy\" + 0.009*\"group\" + 0.009*\"assessment\"',)\n",
+      "3: ('0.036*\"supplier\" + 0.028*\"law\" + 0.024*\"conduct\" + 0.020*\"compliance\" + 0.019*\"chain\" + 0.017*\"product\" + 0.017*\"employee\" + 0.016*\"require\" + 0.016*\"labor\" + 0.016*\"standard\"',)\n",
       "\n",
-      "7: ('0.032*\"business\" + 0.022*\"policy\" + 0.022*\"chain\" + 0.018*\"supplier\" + 0.016*\"limit\" + 0.016*\"company\" + 0.013*\"service\" + 0.013*\"take\" + 0.012*\"risk\" + 0.012*\"group\"',)\n",
+      "14: ('0.028*\"e\" + 0.015*\"sms\" + 0.011*\"risk\" + 0.009*\"business\" + 0.009*\"year\" + 0.009*\"ahead\" + 0.008*\"bet\" + 0.008*\"co_op\" + 0.008*\"chain\" + 0.008*\"service\"',)\n",
       "\n",
-      "8: ('0.024*\"policy\" + 0.019*\"supplier\" + 0.015*\"employee\" + 0.015*\"risk\" + 0.014*\"chain\" + 0.013*\"company\" + 0.013*\"ensure\" + 0.010*\"work\" + 0.009*\"service\" + 0.009*\"organization\"',)\n",
+      "26: ('0.024*\"risk\" + 0.019*\"business\" + 0.017*\"supplier\" + 0.013*\"include\" + 0.013*\"service\" + 0.011*\"chain\" + 0.009*\"limit\" + 0.009*\"financial\" + 0.008*\"global\" + 0.008*\"provide\"',)\n",
       "\n",
-      "9: ('0.030*\"supplier\" + 0.028*\"business\" + 0.016*\"policy\" + 0.015*\"chain\" + 0.013*\"work\" + 0.013*\"code\" + 0.012*\"include\" + 0.011*\"conduct\" + 0.011*\"ensure\" + 0.010*\"employee\"',)\n",
+      "13: ('0.045*\"grange\" + 0.016*\"wool\" + 0.007*\"risk\" + 0.007*\"wrist\" + 0.007*\"chain\" + 0.007*\"hip\" + 0.006*\"leg\" + 0.005*\"skin\" + 0.005*\"rectangular\" + 0.004*\"ankle\"',)\n",
       "\n",
-      "10: ('0.026*\"supplier\" + 0.023*\"business\" + 0.023*\"policy\" + 0.017*\"employee\" + 0.016*\"ensure\" + 0.015*\"chain\" + 0.013*\"include\" + 0.013*\"take\" + 0.010*\"service\" + 0.009*\"work\"',)\n",
+      "20: ('0.061*\"gap\" + 0.058*\"gender\" + 0.050*\"pay\" + 0.012*\"figure\" + 0.011*\"business\" + 0.010*\"policy\" + 0.010*\"chain\" + 0.009*\"risk\" + 0.009*\"supplier\" + 0.009*\"woman\"',)\n",
       "\n",
-      "11: ('0.034*\"student\" + 0.033*\"trust\" + 0.019*\"school\" + 0.014*\"procurement\" + 0.013*\"staff\" + 0.012*\"university\" + 0.011*\"education\" + 0.010*\"research\" + 0.010*\"work\" + 0.010*\"policy\"',)\n",
+      "7: ('0.029*\"company\" + 0.025*\"business\" + 0.019*\"chain\" + 0.019*\"limit\" + 0.018*\"supplier\" + 0.015*\"policy\" + 0.014*\"service\" + 0.012*\"risk\" + 0.010*\"employee\" + 0.010*\"new\"',)\n",
       "\n",
-      "12: ('0.043*\"chain\" + 0.024*\"business\" + 0.019*\"ensure\" + 0.016*\"risk\" + 0.013*\"system\" + 0.013*\"policy\" + 0.013*\"supplier\" + 0.012*\"take\" + 0.011*\"service\" + 0.010*\"place\"',)\n",
+      "27: ('0.019*\"supplier\" + 0.017*\"risk\" + 0.015*\"work\" + 0.015*\"chain\" + 0.015*\"right\" + 0.011*\"business\" + 0.009*\"worker\" + 0.009*\"continue\" + 0.009*\"team\" + 0.008*\"year\"',)\n",
       "\n",
-      "13: ('0.030*\"woman\" + 0.014*\"risk\" + 0.011*\"shop\" + 0.010*\"girl\" + 0.009*\"chain\" + 0.009*\"man\" + 0.009*\"work\" + 0.008*\"shoe\" + 0.007*\"new\" + 0.007*\"include\"',)\n",
+      "48: ('0.035*\"business\" + 0.034*\"chain\" + 0.025*\"policy\" + 0.022*\"ensure\" + 0.018*\"supplier\" + 0.018*\"risk\" + 0.015*\"take\" + 0.011*\"company\" + 0.011*\"place\" + 0.009*\"employee\"',)\n",
       "\n",
-      "14: ('0.030*\"risk\" + 0.020*\"service\" + 0.019*\"group\" + 0.016*\"business\" + 0.013*\"financial\" + 0.012*\"supplier\" + 0.011*\"chain\" + 0.010*\"property\" + 0.010*\"include\" + 0.009*\"year\"',)\n",
+      "46: ('0.057*\"supplier\" + 0.018*\"risk\" + 0.016*\"policy\" + 0.016*\"include\" + 0.016*\"employee\" + 0.015*\"compliance\" + 0.015*\"business\" + 0.014*\"chain\" + 0.012*\"standard\" + 0.011*\"company\"',)\n",
       "\n",
-      "15: ('0.035*\"chain\" + 0.028*\"supplier\" + 0.027*\"risk\" + 0.027*\"business\" + 0.024*\"policy\" + 0.019*\"ensure\" + 0.016*\"take\" + 0.010*\"place\" + 0.010*\"include\" + 0.009*\"employee\"',)\n",
+      "35: ('0.015*\"vehicle\" + 0.014*\"car\" + 0.013*\"chain\" + 0.013*\"service\" + 0.013*\"travel\" + 0.013*\"business\" + 0.011*\"ensure\" + 0.011*\"policy\" + 0.011*\"new\" + 0.010*\"offer\"',)\n",
       "\n",
-      "16: ('0.019*\"product\" + 0.013*\"supplier\" + 0.012*\"accessory\" + 0.009*\"back\" + 0.009*\"beauty\" + 0.009*\"chain\" + 0.007*\"view\" + 0.007*\"business\" + 0.005*\"shop\" + 0.005*\"policy\"',)\n",
+      "30: ('0.033*\"conveyancing\" + 0.028*\"policy\" + 0.023*\"firm\" + 0.012*\"service\" + 0.011*\"supplier\" + 0.010*\"business\" + 0.010*\"chain\" + 0.009*\"work\" + 0.009*\"risk\" + 0.008*\"client\"',)\n",
       "\n",
-      "17: ('0.020*\"supplier\" + 0.019*\"chain\" + 0.018*\"risk\" + 0.018*\"work\" + 0.015*\"worker\" + 0.014*\"trade\" + 0.013*\"ethical\" + 0.010*\"business\" + 0.009*\"team\" + 0.009*\"source\"',)\n",
+      "17: ('0.026*\"jump\" + 0.018*\"cable\" + 0.016*\"paint\" + 0.016*\"wire\" + 0.013*\"conduit\" + 0.011*\"fire\" + 0.010*\"supplier\" + 0.010*\"chain\" + 0.010*\"tool\" + 0.010*\"filler\"',)\n",
       "\n",
-      "18: ('0.040*\"information\" + 0.026*\"use\" + 0.022*\"may\" + 0.019*\"website\" + 0.016*\"personal\" + 0.015*\"datum\" + 0.015*\"provide\" + 0.012*\"service\" + 0.011*\"process\" + 0.008*\"shall\"',)\n",
+      "34: ('0.027*\"charity\" + 0.022*\"policy\" + 0.022*\"care\" + 0.021*\"work\" + 0.020*\"support\" + 0.012*\"people\" + 0.009*\"toggle\" + 0.009*\"service\" + 0.009*\"help\" + 0.009*\"team\"',)\n",
       "\n",
-      "19: ('0.014*\"product\" + 0.012*\"information\" + 0.011*\"service\" + 0.011*\"business\" + 0.008*\"market\" + 0.007*\"datum\" + 0.007*\"contact\" + 0.007*\"process\" + 0.007*\"use\" + 0.006*\"company\"',)\n",
+      "28: ('0.033*\"policy\" + 0.033*\"business\" + 0.029*\"supplier\" + 0.029*\"employee\" + 0.022*\"take\" + 0.020*\"conduct\" + 0.014*\"ensure\" + 0.013*\"chain\" + 0.012*\"place\" + 0.012*\"operate\"',)\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print_topic_keywords(LDA_MODELS[20])"
+    "print_topic_keywords(LDA_MODELS[50])"
    ]
   },
   {
