--- a/notebooks/20210129-LDA-sklearn-trigrams.ipynb
+++ b/notebooks/20210129-LDA-sklearn-trigrams.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,24 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "id": "l7WeR-r6uf4x"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-3-ce0a29d28a91>:7: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.feature_extraction.text import (CountVectorizer)\n",
     "from sklearn.decomposition import LatentDirichletAllocation\n",
+    "from matplotlib.ticker import MaxNLocator\n",
     "import numpy as np\n",
     "from os import getcwd, path\n",
     "import os\n",
@@ -59,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,6 +737,45 @@
     "    LOG_PERPLEXITIES, \n",
     "    filename=f\"{model_name_template}_log_perplexities_{N_TOPICS[0]}_{N_TOPICS[1]}_topics\", \n",
     "    path=PICKLE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading pre-computed log-perplexities\n",
+    "LOG_PERPLEXITIES = load_pickle(\n",
+    "    path.join(\n",
+    "        PICKLE_PATH, \n",
+    "        f\"{model_name_template}_log_perplexities_{N_TOPICS[0]}_{N_TOPICS[1]}_topics\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_N_TOPIC = 20\n",
+    "_, ax = plt.subplots()\n",
+    "ax.plot(\n",
+    "    [i for i in range(*N_TOPICS)][:MAX_N_TOPIC], \n",
+    "    list(LOG_PERPLEXITIES.values())[:MAX_N_TOPIC])\n",
+    "ax.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "ax.set_title(\"Log-Perplexities Vs Number of topics\")\n",
+    "ax.set_xlabel(\"Number of topics\")\n",
+    "ax.set_ylabel(\"Log-Perplexities\")\n",
+    "ax.axvline(x=7, linestyle=\"dashed\", color=\"grey\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From above, we can say <b>8</b> as correct number of topics for LDA on bigrams."
    ]
   }
  ],
