Added recent changes

--- a/notebooks/download-pdf-v2.ipynb
+++ b/notebooks/download-pdf-v2.ipynb
@@ -511,9 +511,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "modern-slavery",
+   "display_name": "modern_slavery",
    "language": "python",
-   "name": "modern-slavery"
+   "name": "modern_slavery"
   },
   "language_info": {
    "codemirror_mode": {
@@ -525,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
