--- a/notebooks/20220111-statement-cleaning.ipynb
+++ b/notebooks/20220111-statement-cleaning.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,10 +346,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18621"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df.drop_duplicates([\"Company ID\", \"Statement ID\"]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"blue\">Level of data = [\"Company ID\", \"Company\", \"Statement ID\", \"URL\"]</font>"
+    "### <font color=\"blue\">Level of data = [\"Company ID\", \"Statement ID\"]</font>"
    ]
   },
   {
